<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tts.project.handi.activity.ServiceSettingActivity">

    <include layout="@layout/toolbar_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/x20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y40"
            android:text="@string/text_service_settings"
            android:textSize="@dimen/y30"
            android:textColor="@color/RGB139_139_139" />

        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/y25"
            android:background="@color/RGB139_139_139" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y30"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_shui"
                style="@style/style_service_setting_checkbox"
                android:layout_marginLeft="0dp"
                android:text="@string/text_water_work" />

            <CheckBox
                android:id="@+id/checkbox_dian"
                style="@style/style_service_setting_checkbox"
                android:text="@string/text_electricity_work" />

            <CheckBox
                android:id="@+id/checkbox_ni"
                style="@style/style_service_setting_checkbox"
                android:text="@string/text_cement_work" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y50"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_mu"
                style="@style/style_service_setting_checkbox"
                android:layout_marginLeft="0dp"
                android:text="@string/text_wood_work" />

            <CheckBox
                android:id="@+id/checkbox_qi"
                style="@style/style_service_setting_checkbox"
                android:text="@string/text_paint_work" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save_change"
        android:layout_width="@dimen/x500"
        android:layout_height="@dimen/y80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y213"
        android:background="@color/themeFontsColor"
        android:gravity="center"
        android:text="@string/text_save"
        android:textColor="@color/white"
        android:textSize="@dimen/y30" />


</LinearLayout>
